--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,7 +1,12 @@
 .navbar {
 	display: flex;
 	align-items: center;
-	margin-top: 40px;
+	height: 65px;
+	background-color: #1a73e8;
+	color: white;
+	padding: 0 2rem;
+	position: sticky;
+	top: 0;
 	ul {
 		display: flex;
 		width: 100%;
@@ -16,6 +21,17 @@
 			display: flex;
 			gap: 1rem;
 			align-items: center;
+		}
+		.logout-btn {
+			color: white;
+			border: 1px solid white;
+			outline: none;
+			cursor: pointer;
+			border-radius: 4px;
+			&:hover {
+				background-color: white;
+				color: #1a73e8;
+			}
 		}
 	}
 }
