--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@
 
 body {
 	font-family: 'Poppins', sans-serif;
+	background-color: var(--bg-color);
 }
 
 ul {
@@ -27,10 +28,45 @@ ul {
 	}
 }
 
+input {
+	padding: 8px 6px;
+	font-size: 1rem;
+	color: #777;
+	width: 100%;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	height: 45px;
+	padding-left: 10px;
+}
+
+textarea {
+	min-height: 160px;
+	padding: 10px;
+	font-family: 'Poppins';
+	font-size: 1.2rem;
+}
+
+.btn {
+	border: 1px solid var(--primary-color);
+	color: var(--primary-color);
+	background-color: #fff;
+	padding: 0.75rem 1rem;
+	border-radius: 4px;
+	margin-top: 10px;
+	cursor: pointer;
+	&:hover {
+		background-color: rgb(241, 241, 241);
+	}
+}
+
 .App {
 	display: flex;
 	.container {
 		flex-grow: 1;
-		padding: 0 60px;
+		.page-content {
+			margin-top: 2.5rem;
+			padding: 0 2rem;
+			width: calc(100% - 250px);
+		}
 	}
 }
