--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
 
 :root {
-	--heading-color: #444;
+	--heading-color: #2c2c2c;
 	--text-color: #999;
 	--primary-color: #051e34;
 	--highlight-color: #d13267;
-	--bg-color: #f4f4f4;
+	--bg-color: #ffffff;
 }
