--- a/src/components/online-users/OnlineUsers.scss
+++ b/src/components/online-users/OnlineUsers.scss
@@ -1,36 +1,36 @@
 .user-list {
-	width: 250px;
-	min-width: 250px;
-	padding: 30px;
 	box-sizing: border-box;
-	background-color: #fbfbfb;
-	color: var(--heading-color);
-	min-height: 100vh;
-	position: fixed;
-	right: 0;
-	top: 65px;
-	h2 {
-		text-align: right;
-		margin-bottom: 40px;
-		padding-bottom: 40px;
-		border-bottom: 1px solid #eee;
-		font-size: 1.2rem;
+	margin-top: 10px;
+
+	.user-label {
+		display: flex;
+		align-items: center;
+		gap: 0.3rem;
+		padding: 0 10px;
+		p {
+			font-size: 1rem;
+		}
+		.icon {
+			font-size: 1.2rem;
+		}
 	}
+
 	.user-list-item {
 		display: flex;
-		justify-content: flex-end;
+		padding: 0 10px;
+
 		align-items: center;
-		margin: 20px auto;
+		margin: 10px 0;
 	}
 	.avatar {
-		margin-left: 10px;
-		width: 40px;
-		height: 40px;
+		width: 25px;
+		height: 25px;
+		margin-right: 10px;
 	}
 	// online users
 	.online-user {
 		display: inline-block;
-		margin-right: 10px;
+		margin-left: 10px;
 		width: 12px;
 		height: 12px;
 		border-radius: 50%;
