--- a/src/components/project-list/ProjectList.scss
+++ b/src/components/project-list/ProjectList.scss
@@ -1,20 +1,20 @@
+@import '../../styles/mixins.scss';
 .project-list {
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 	gap: 1.5rem;
 	margin-top: 40px;
 	a {
 		background-color: #fff;
-		width: 300px;
+		width: 310px;
 		height: 240px;
-		padding: 1rem;
 		border-radius: 6px;
 		box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 		cursor: pointer;
 		text-decoration: none;
 		position: relative;
-		&:hover {
-			background-color: #f5f5f5;
+		@include phone() {
+			width: 100%;
 		}
 		.icon {
 			position: absolute;
@@ -23,17 +23,24 @@
 			color: rgb(121, 117, 117);
 			font-size: 1.1rem;
 		}
-		h4 {
-			color: black;
+		.project-header {
+			border-bottom: 1px solid lightgray;
+			padding: 1rem;
+			h4 {
+				font-weight: lighter;
+			}
+			p {
+				color: rgb(121, 117, 117);
+			}
 		}
-		p {
-			color: rgb(121, 117, 117);
-		}
+
 		.assigned-to {
 			display: flex;
 			flex-direction: column;
 			gap: 0.5rem;
 			margin-top: 1rem;
+			padding: 0 1rem;
+			color: rgb(121, 117, 117);
 
 			ul {
 				display: flex;
@@ -49,7 +56,7 @@
 			.avatar {
 				width: 30px;
 				height: 30px;
-				outline: 1px solid #ddd;
+				border: 1px solid #ddd;
 				img {
 					width: 100%;
 					height: 100%;
