--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -8,7 +8,7 @@
 	color: white;
 	position: sticky;
 	top: 0;
-	z-index: 9999;
+	z-index: 9997;
 	padding: 0 0.3rem;
 	padding-left: 2rem;
 	ul {
@@ -71,7 +71,7 @@
 			border-radius: 4px;
 			box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 			@include phone() {
-				height: 214px;
+				height: 254px;
 				right: 1rem;
 			}
 			.settings-header {
@@ -139,7 +139,7 @@
 				border-top: 1px solid lightgray;
 				width: 230px;
 				@include phone() {
-					width: 280px;
+					width: 100%;
 				}
 				cursor: pointer;
 				&:hover {
