--- a/src/components/add-friend/AddFriend.scss
+++ b/src/components/add-friend/AddFriend.scss
@@ -21,4 +21,20 @@
 	margin-left: auto;
 	margin-right: auto;
 	top: 100px;
+	.error {
+		background-color: #f8d7da;
+		color: #721c24;
+		padding: 0.5rem;
+		border-radius: 4px;
+		font-size: 0.8rem;
+		margin: 10px 0;
+	}
+	.success {
+		background-color: #9be2a1;
+		color: #1c7223;
+		padding: 0.5rem;
+		border-radius: 4px;
+		font-size: 0.8rem;
+		margin: 10px 0;
+	}
 }
