--- a/src/components/online-users/OnlineUsers.scss
+++ b/src/components/online-users/OnlineUsers.scss
@@ -1,7 +1,27 @@
 .user-list {
 	box-sizing: border-box;
 	margin-top: 10px;
+	width: 280px;
+	height: 400px;
+	position: relative;
+	padding-left: 6px;
+	.friend {
+		width: 100%;
+		height: 50px;
+		display: flex;
+		align-items: center;
 
+		// online users
+		.online-user {
+			display: inline-block;
+			margin-left: 10px;
+			width: 12px;
+			height: 12px;
+			border-radius: 50%;
+			background-color: #0ebb50;
+			margin-top: 2px;
+		}
+	}
 	.user-label {
 		display: flex;
 		align-items: center;
@@ -26,15 +46,5 @@
 		width: 25px;
 		height: 25px;
 		margin-right: 10px;
-	}
-	// online users
-	.online-user {
-		display: inline-block;
-		margin-left: 10px;
-		width: 12px;
-		height: 12px;
-		border-radius: 50%;
-		background-color: #0ebb50;
-		margin-top: 2px;
 	}
 }
